# blocky

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
resources/shaders/: textured.frag  textured.vert
src/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt  Camera.hpp  Engine.hpp  Mipmaps.hpp  TextureData.hpp  Time.hpp  Timer.hpp  Utils.hpp  Window.hpp
src/engine/gles2/: Context.hpp  DebugGUI.hpp  Renderer.hpp  SDLOpenGL.hpp  Shader.hpp  Texture.hpp  TextureAtlas.hpp
src/game/: Block.hpp  BlockMesh.hpp  ChunkSystem.hpp  FPSController.hpp  Game.hpp  VoxelData.hpp  VoxelMesher.hpp
src/game/shaders/: flatcolor.fs  flatcolor.vs
